# turbina

./: .gitignore  Cargo.toml  README.md  build-wasm.sh  sample.md  testSamplePrograms.tb
online-playground/: .firebaserc  README.md  index.html  package.json  pnpm-lock.yaml
online-playground/assets/: style.css
online-playground/src/: App.tsx  CodePlayground.tsx  Header.tsx  ResizablePanels.tsx  samplePrograms.ts
samples/: codeblock.tb  fastExponentiation.tb  fizzbuzz.tb  functions.tb  httpServer.tb  lists.tb  mapFilterReduce.tb
samples/output/: codeblock.tb.output  functions.tb.output  lists.tb.output  mapFilterReduce.tb.output
src/: errors.rs  evaluation.rs  evaluator.rs  interpreter_error.rs  lexer.rs  lib.rs  library.rs  library_io.rs  main.rs  models.rs  parser.rs  rustyline.rs  streams.rs  type_resolver.rs  unused.rs  validation.rs  validator.rs
src/libraries/: factories.rs  mod.rs  standard_library.rs
src/parser/: ast_parser.rs  expr_parser.rs  import_parser.rs  let_parser.rs  mod.rs  shared_parsers.rs  statement_parser.rs  type_declaration_parser.rs  utils.rs
src/test_data/: fileStreamTest.tb
src/type_resolver/: ast_type_resolver.rs  expr_type_resolver.rs  import_type_resolver.rs  let_type_resolver.rs  mod.rs  shared.rs
src/type_resolver/test_data/: moduleWithTypeError.tb  validModule.tb
