[package]
name = "turbina"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "turbina"
crate-type = ["rlib", "cdylib"]

[dependencies]
custom_error = "1.9.2"
once_cell = "1.20.2"
rand = "0.9.0"
regex = "1.11.1"
rstest = "0.24.0"
wasm-bindgen = "0.2.100"

# for rand create to work with WASM
getrandom = { version = "0.3", features = ["wasm_js"] }
